fix overflow-x

--- a/style/style.css
+++ b/style/style.css
@@ -261,6 +261,7 @@ footer .awals .awal a {
     top: 6.5vh;
     background-color: white;
     z-index: 1;
+    overflow-x: hidden;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
